# fastapi-starter

./: .envrc.template  .gitignore  .isort.cfg  Makefile  alembic.ini  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 2a3402cf4310_adds_user_table.py
src/api/: app.py
src/api/helpers/: db.py
src/api/integrations/: postgres.py
src/api/routers/users/: actions.py  views.py
src/api/schemas/: __init__.py  user.py
src/app/: main.py
src/models/: base.py  user.py
